syntax = "proto3";

package authorizer.accesscontroller.v1alpha1;

option go_package = "github.com/authorizer-tech/access-controller/genprotos/authorizer/accesscontroller/v1alpha1;acl";

// RelationTuple relates an Object with a Subject.
//
// While a tuple reflects a relationship between Object
// and Subject, they do not completely define the effective ACLs.
message RelationTuple {
  // The namespace this relation tuple lives in.
  string namespace = 1;

  // The object related by this tuple.
  // Objects live within the namespace of the tuple.
  string object = 2;

  // The relation between an Object and a Subject.
  string relation = 3;

  // The subject related by this tuple.
  // A Subject either represents a concrete subject id or
  // a SubjectSet that expands to more Subjects.
  Subject subject = 4;
}

// Subject is either a concrete subject id or
// a subject set expanding to more Subjects.
message Subject {
  // The reference of this abstract subject.
  oneof ref {
    // A concrete id of the subject.
    string id = 1;

    // A subject set that expands to more Subjects
    // (used for inheritance).
    SubjectSet set = 2;
  }
}

// SubjectSet refers to all subjects which have
// the same `relation` to an `object`.
// It is also used for inheritance.
message SubjectSet {
  // The namespace of the object and relation
  // referenced in this subject set.
  string namespace = 1;

  // The object selected by the subjects.
  string object = 2;

  // The relation to the object by the subjects.
  string relation = 3;
}